--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,13 +2,10 @@ name: test workflow
 on:
  workflow_dispatch:
    inputs:
-     branch:
-       description: 'Branch to deploy'
-       required: true
-       default: 'Dev, QA, Staging'
      choice:
        type: choice
-       description: Select a branch 
+       required: true
+       description: Select a branch to deploy
        options:
        - Dev
        - QA
