--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,21 +28,32 @@ jobs:
             git fetch --all
             git branch -a
             git checkout Dev
-            gh run Dev.yml
+            echo "Running workflow on the Dev branch..."
+            gh repo clone Suvit-Sharma/DevopsT temp-repo
+            cd temp-repo
+            git checkout Dev
+            gh workflow run Dev.yaml
           elif [ "${{ inputs.choice }}" == "QA" ]; then
             echo "Executing workflow for QA branch"
             git fetch --all
             git branch -a
             git checkout QA
-            gh run QA_workflow.yaml
+            echo "Running workflow on the QA branch..."
+            gh repo clone Suvit-Sharma/DevopsT temp-repo
+            cd temp-repo
+            git checkout QA
+            gh workflow run QA.yaml
           elif [ "${{ inputs.choice }}" == "Staging" ]; then
             echo "Executing workflow for Staging branch"
             git fetch --all
             git branch -a
             git checkout Staging
-            gh run Staging_workflow.yaml
+            echo "Running workflow on the Staging branch..."
+            gh repo clone Suvit-Sharma/DevopsT temp-repo
+            cd temp-repo
+            git checkout Staging
+            gh workflow run Staging.yaml
           else
             echo "Invalid choice"
             exit 1
           fi
-
