--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,21 +32,24 @@ jobs:
             git branch -a
             git checkout Dev
             echo "Running workflow on the Dev branch..."
-            gh workflow run Dev.yaml
+            workflow_id=$(gh workflow list | grep "Dev.yaml" | awk '{print $1}')
+            gh workflow run $workflow_id
           elif [ "${{ inputs.choice }}" == "QA" ]; then
             echo "Executing workflow for QA branch"
             git fetch --all
             git branch -a
             git checkout QA
             echo "Running workflow on the QA branch..."
-            gh workflow run QA.yaml
+            workflow_id=$(gh workflow list | grep "QA.yaml" | awk '{print $1}')
+            gh workflow run $workflow_id
           elif [ "${{ inputs.choice }}" == "Staging" ]; then
             echo "Executing workflow for Staging branch"
             git fetch --all
             git branch -a
             git checkout Staging
             echo "Running workflow on the Staging branch..."
-            gh workflow run Staging.yaml
+            workflow_id=$(gh workflow list | grep "Staging.yaml" | awk '{print $1}')
+            gh workflow run $workflow_id
           else
             echo "Invalid choice"
             exit 1
