--- a/.github/workflows /QA_workflow.yaml
+++ b/.github/workflows /QA_workflow.yaml
@@ -1,18 +1,23 @@
 name: QA Deployment Workflow
 on:
+  push:
+    branches:
+      - QA
+      
   workflow_dispatch:
     inputs:
-      choice:
-        type: choice
+      branch:
+        description: 'QA Branch'
         required: true
-        description: Select a branch to deploy
-        options:
-          - QA
+        default: 'QA'
+        type: string
 
 jobs:
   test:
     runs-on: ubuntu-latest
 
+    if: ${{ github.event_name == 'workflow_dispatch' }}
+    
     steps:
       - name: Print branch
         run: echo "qa"
