--- a/.github/workflows/cc.yaml
+++ b/.github/workflows/cc.yaml
@@ -1,5 +1,3 @@
-# common_config.yml
-
 name: Common Config
 
 on:
@@ -30,3 +28,9 @@ jobs:
           variable_a: "QA"
           variable_b: "aQA"
           variable_c: "bQA"
+      
+      - name: Echo Variables
+        run: |
+          echo "variable_a: $variable_a"
+          echo "variable_b: $variable_b"
+          echo "variable_c: $variable_c"
