--- a/.github/workflows/Dev.yml
+++ b/.github/workflows/Dev.yml
@@ -22,7 +22,7 @@ jobs:
         uses: actions/checkout@v3
         
       - name: Include Common Config Steps
-        uses: ./cc.yaml
+        uses: Suvit-Sharma/DevopsT/.github/workflows/cc.yaml@Dev
         
       - name: cat Testing.txt(Dev)
         run: cat Testing.txt
