--- a/.github/workflows/Dev.yml
+++ b/.github/workflows/Dev.yml
@@ -13,7 +13,7 @@ on:
 
 jobs:
 
-  Calling_common_config:
+  calling_common_config:
     if: ${{ github.event_name == 'workflow_dispatch' }}
     uses: Suvit-Sharma/DevopsT/.github/workflows/cc.yaml@Dev
     
@@ -26,3 +26,9 @@ jobs:
         
       - name: cat Testing.txt(Dev)
         run: cat Testing.txt
+        
+      - name: print variables from reusable workflow
+        run: |
+          echo ${{ needs.calling_common_config.outputs.dev_var1 }}
+          echo ${{ needs.calling_common_config.outputs.dev_var2 }}
+          echo ${{ needs.calling_common_config.outputs.dev_var3 }}
