--- a/.github/workflows/cc.yaml
+++ b/.github/workflows/cc.yaml
@@ -26,8 +26,7 @@ jobs:
       - name: checkout
         uses: actions/checkout@v3
         
-      - name: Setting Dev variables
-        id: dev_vars
+      - id: dev_vars
         if: github.ref == 'refs/heads/dev'
         run: |
           echo "variable_a=Dev" >> $GITHUB_OUTPUT
