--- a/.github/workflows/cc.yaml
+++ b/.github/workflows/cc.yaml
@@ -3,7 +3,7 @@ name: Common Config
 on:
   push:
     branches:
-      - dev
+      - Dev
       - QA
   workflow_call:
     outputs:
@@ -27,7 +27,7 @@ jobs:
         uses: actions/checkout@v3
         
       - id: dev_vars
-        if: github.ref == 'refs/heads/dev'
+        if: github.ref == 'refs/heads/Dev'
         run: |
           echo "variable_a=Dev" >> $GITHUB_OUTPUT
           echo "variable_b=aDev" >> $GITHUB_OUTPUT
