--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -52,9 +52,11 @@ jobs:
             exit 1
           fi
           
-      - uses: azure/setup-kubernetes@v3
-        with:
-          kubernetes-version: latest
+      - name: Install kubectl
+        run: |
+          curl -fsSL -o kubectl https://storage.googleapis.com/kubernetes-release/release/v1.23.2/bin/linux/amd64/kubectl
+          chmod +x kubectl
+          sudo mv kubectl /usr/local/bin/kubectl
 
       - name: Install Helm
         run: |
