--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -63,7 +63,10 @@ jobs:
           curl -fsSL -o get_helm.sh https://raw.githubusercontent.com/helm/helm/main/scripts/get-helm-3
           chmod 700 get_helm.sh
           ./get_helm.sh
-
+      
+      - name: display directory
+        run: ls -lart
+        
       - name: Deploy Helm Chart
         run: |
           helm install my-nginx DevopsT/tree/java/nginx-chart
