--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -65,7 +65,7 @@ jobs:
           ./get_helm.sh
       
       - name: display directory
-        run: ls 
+        run: ls | grep chart
         
       - name: Deploy Helm Chart
         run: |
