--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -71,5 +71,5 @@ jobs:
         
       - name: Deploy Helm Chart
         run: |
-          helm install my-nginx nginx-chart
+          helm install my-nginx nginx-chart/
 
