--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -63,7 +63,10 @@ jobs:
           curl -fsSL -o get_helm.sh https://raw.githubusercontent.com/helm/helm/main/scripts/get-helm-3
           chmod 700 get_helm.sh
           ./get_helm.sh
-      
+          
+      - name: Checkout code
+        uses: actions/checkout@v3
+        
       - name: display directory
         run: ls -a
         env:
@@ -71,5 +74,5 @@ jobs:
         
       - name: Deploy Helm Chart
         run: |
-          helm install my-nginx ./nginx-chart/Chart.yaml
+          helm install my-nginx helmcharts
 
