--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -77,6 +77,8 @@ jobs:
           curl -LO https://storage.googleapis.com/minikube/releases/latest/minikube-linux-amd64
           chmod +x minikube-linux-amd64
           sudo mv minikube-linux-amd64 /usr/local/bin/minikube
+          sudo apt-get update
+          sudo apt-get install -y conntrack
           sudo minikube start --driver=none
 
       - name: Configure kubectl for Minikube
