--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -72,14 +72,25 @@ jobs:
         env:
           ACTIONS_RUNNER_DEBUG: true
           
-      - name: Start Minikube
+      - name: Install Minikube and Dependencies
         run: |
+          # Install Minikube
           curl -LO https://storage.googleapis.com/minikube/releases/latest/minikube-linux-amd64
           chmod +x minikube-linux-amd64
           sudo mv minikube-linux-amd64 /usr/local/bin/minikube
+
+          # Install conntrack (required by none driver)
           sudo apt-get update
           sudo apt-get install -y conntrack
+
+          # Install crictl (required by Kubernetes 1.27.3)
+          sudo curl -L https://github.com/kubernetes-sigs/cri-tools/releases/download/v1.22.0/crictl-v1.22.0-linux-amd64.tar.gz --output crictl.tar.gz
+          sudo tar zxvf crictl.tar.gz -C /usr/local/bin
+          sudo chmod +x /usr/local/bin/crictl
+
+          # Start Minikube with none driver
           sudo minikube start --driver=none
+
 
       - name: Configure kubectl for Minikube
         run: |
