--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -79,11 +79,11 @@ jobs:
       - name: Deploy Helm Chart
         run: |
           if [ "${{ inputs.choice }}" == "Dev" ]; then
-            helm install my-nginx helmcharts --values devvalues.yaml
+            helm install my-nginx helmcharts --values helmcharts/devvalues.yaml
           elif [ "${{ inputs.choice }}" == "QA" ]; then
-            helm install my-nginx helmcharts --values qavalues.yaml
+            helm install my-nginx helmcharts --values helmcharts/qavalues.yaml
           elif [ "${{ inputs.choice }}" == "Staging" ]; then
-            helm install my-nginx helmcharts --values stagingvalues.yaml
+            helm install my-nginx helmcharts --values helmcharts/stagingvalues.yaml
           else 
             exit 1
           fi
