--- a/helmcharts/templates/service.yaml
+++ b/helmcharts/templates/service.yaml
@@ -5,7 +5,7 @@ metadata:
 spec:
   selector:
     app.kubernetes.io/instance: {{ .Release.Name }}
-  type: {{ $.Values.service.type | default "ClusterIP"}}
+  type: {{ .Values.service.type }}
   ports:
     - protocol: {{ .Values.service.protocol | default "TCP" }}
       port: {{ .Values.service.port }}
